--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0"
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@types/node": "^25.2.0"
   }
 }
