--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
-    "@types/node": "^25.2.0"
+    "@pinia/testing": "^1.0.3",
+    "@types/node": "^25.2.0",
+    "@vitest/ui": "^4.0.18",
+    "@vue/test-utils": "^2.4.6",
+    "jsdom": "^28.0.0",
+    "vitest": "^4.0.18"
   }
 }
